@@ -10,6 +10,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23217).
   * Use malloc() to allocate X image data (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23221).
+  * If there are more components than quantization tables, the last table is
+    replicated.
 
 2013-04-15  6.8.4-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.4-10, SVN revision 11851.
